[package]
name = "define"
version = "0.1.0"
authors = ["albert-tomanek <electron826@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"    
itertools = "0.9"
colored = "2"